plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'com.google.protobuf' version '0.9.5'
}

group = 'com.youtube'
version = '1.0.0'
sourceCompatibility = '17'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

ext {
    nanojsonVersion = 'e9d656ddb49a412a5a0a5d5ef20ca7ef09549996'
    jsr305Version = '3.0.2'
    checkstyleVersion = '10.20.1'
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Swagger/OpenAPI Documentation
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'

    // NewPipe dependencies
    implementation "com.github.TeamNewPipe:nanojson:${nanojsonVersion}"
    implementation 'org.jsoup:jsoup:1.21.2'
    implementation "com.google.code.findbugs:jsr305:${jsr305Version}"
    implementation 'com.google.protobuf:protobuf-javalite:4.32.1'
    implementation 'org.mozilla:rhino:1.8.0'
    implementation 'org.mozilla:rhino-engine:1.8.0'

    // HTTP Client
    implementation 'com.squareup.okhttp3:okhttp:4.12.0'

    // Lombok for cleaner code
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

protobuf {
    protoc {
        artifact = 'com.google.protobuf:protoc:4.32.1'
    }

    generateProtoTasks {
        all().configureEach { task ->
            task.builtins {
                java {
                    option 'lite'
                }
            }
        }
    }
}
